WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70662
Caret is drawn in the wrong place in multi-column blocks
https://bugs.webkit.org/show_bug.cgi?id=70662
Summary
Caret is drawn in the wrong place in multi-column blocks
mitz
Reported
2011-10-21 17:25:42 PDT
Caret is drawn in the wrong place in multi-column blocks
Attachments
Do not use offsetForContents() on point in painting root coordinates
(3.43 KB, patch)
2011-10-21 17:30 PDT
,
mitz
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2011-10-21 17:30:04 PDT
Created
attachment 112049
[details]
Do not use offsetForContents() on point in painting root coordinates
mitz
Comment 2
2011-10-21 22:52:44 PDT
Fixed in <
http://trac.webkit.org/r98191
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug